--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>武器ギアルーレット</title>
   <style>
     body { font-family: sans-serif; background: #e7f4ff; text-align: center; padding: 20px; }
