--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
     margin: 4px 0;
   }
 </style>
+<style>
+body {
+  font-size: 1.2rem;
+  padding: 1rem;
+}
+
+@media (max-width: 600px) {
+  body {
+    font-size: 1rem;
+  }
+}
+</style>
 
 </head>
 <body>
