--- a/index.html
+++ b/index.html
@@ -1,28 +1,3 @@
-<div id="results" class="wrapper result"></div>
-
-<script>
-  function runRoulette() {
-    const inputs = document.querySelectorAll('#nameInputs input');
-    const resultsDiv = document.getElementById('results');
-    resultsDiv.innerHTML = ""; // リセット
-
-    inputs.forEach((input, index) => {
-      const name = input.value || `プレイヤー${index + 1}`;
-      const weapon = weapons[Math.floor(Math.random() * weapons.length)];
-      const gear = gearList[Math.floor(Math.random() * gearList.length)];
-
-      const card = document.createElement("div");
-      card.className = "card";
-      card.innerHTML = `
-        <strong>${name}</strong><br>
-        武器：${weapon}<br>
-        ギア：${gear}
-      `;
-      resultsDiv.appendChild(card);
-    });
-  }
-</script>
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -49,6 +24,10 @@
       font-size: 16px;
     }
 
+    #results {
+      margin-top: 20px;
+    }
+
     @media (max-width: 600px) {
       body {
         font-size: 1rem;
@@ -57,7 +36,7 @@
 
     .wrapper {
       display: grid;
-      grid-template-columns: repeat(2, 1fr); /* スマホ時は2列 */
+      grid-template-columns: repeat(2, 1fr);
       gap: 10px;
       max-width: 600px;
       margin: 20px auto 0;
@@ -65,7 +44,7 @@
 
     @media (min-width: 768px) {
       .wrapper {
-        grid-template-columns: repeat(4, 1fr); /* PC時は4列 */
+        grid-template-columns: repeat(4, 1fr);
       }
     }
 
@@ -104,37 +83,157 @@
   <input type="text" placeholder="プレイヤー8"><br>
 </div>
 
-<button onclick="runRoulette()">ルーレット開始！</button>
+<div id="controlArea">
+  <button onclick="runRoulette()">ルーレット開始！</button>
+</div>
 
 <div id="results" class="wrapper"></div>
 
+
 <script>
-  const weapons = [/* --- 武器一覧（省略せず貼り付け済み） --- */  
-    "わかばシューター", "もみじシューター", "スプラシューター", "スプラシューターコラボ", "プロモデラーMG", "プロモデラーRG",
-    "N-ZAP85", "N-ZAP89", "シャープマーカー", "シャープマーカーコラボ", "52ガロン", "52ガロンデコ", "96ガロン", "96ガロンデコ",
-    "ジェットスイーパー", "ジェットスイーパーカスタム", "プライムシューター", "プライムシューターコラボ", "ボールドマーカー",
-    "ボールドマーカーネオ", "L3リールガン", "L3リールガンD", "H3リールガン", "H3リールガンD", "ボトルガイザー", "ボトルガイザーフォイル",
-    "スペースシューター", "スペースシューターコラボ", "ホットブラスター", "ホットブラスターカスタム", "ロングブラスター",
-    "ロングブラスターカスタム", "ラピッドブラスター", "ラピッドブラスターデコ", "Rブラスターエリート", "Rブラスターエリートデコ",
-    "クラッシュブラスター", "クラッシュブラスターネオ", "ノヴァブラスター", "ノヴァブラスターネオ", "S-BLAST92", "S-BLAST91",
-    "バケットスロッシャー", "バケットスロッシャーデコ", "ヒッセン", "ヒッセン・ヒュー", "スクリュースロッシャー",
-    "スクリュースロッシャーネオ", "エクスプロッシャー", "エクスプロッシャーカスタム", "オーバーフロッシャー",
-    "オーバーフロッシャーデコ", "モップリン", "モップリンD", "バレルスピナー", "バレルスピナーデコ", "スプラスピナー",
-    "スプラスピナーコラボ", "ハイドラント", "ハイドラントカスタム", "クーゲルシュライバー", "クーゲルシュライバー・ヒュー",
-    "ノーチラス47", "ノーチラス79", "イグザミナー", "イグザミナー・ヒュー", "ホクサイ", "ホクサイ・ヒュー", "パブロ",
-    "パブロ・ヒュー", "フィンセント", "フィンセント・ヒュー", "ドライブワイパー", "ドライブワイパーデコ", "ジムワイパー",
-    "ジムワイパーヒュー", "デンタルワイパーミント", "デンタルワイパースミ", "トライストリンガー", "トライストリンガーコラボ",
-    "LACT-450", "LACT-450デコ", "フルイドV", "フルイドVカスタム", "パラシェルター", "パラシェルターソレーラ",
-    "キャンピングシェルター", "キャンピングシェルターソレーラ", "スパイガジェット", "スパイガジェットソレーラ",
-    "スパイガジェットベッチュー", "24式張替傘・甲", "24式張替傘・乙", "スプラローラー", "スプラローラーコラボ",
-    "カーボンローラー", "カーボンローラーデコ", "ダイナモローラー", "ダイナモローラーテスラ", "ヴァリアブルローラー",
-    "ヴァリアブルローラーフォイル", "ワイドローラー", "ワイドローラーコラボ", "スプラチャージャー", "スプラチャージャーコラボ",
-    "スクイックリンα", "スクイックリンβ", "リッター4K", "リッター4Kカスタム", "4Kスコープ", "4Kスコープカスタム",
-    "スプラスコープ", "スプラスコープコラボ", "ソイチューバー", "ソイチューバーカスタム", "14式竹筒銃・甲",
-    "14式竹筒銃・乙", "R-PEN/5H", "R-PEN/5B", "スプラマニューバー", "スプラマニューバーコラボ", "スパッタリー",
-    "スパッタリー・ヒュー", "クアッドホッパーブラック", "クアッドホッパーホワイト", "ケルビン525", "ケルビン525デコ",
-    "デュアルスイーパー", "デュアルスイーパーカスタム", "ガエンFF", "ガエンFF15"
-  ];
+  const weapons = [
+    "わかばシューター",
+  "もみじシューター",
+  "スプラシューター",
+  "スプラシューターコラボ",
+  "プロモデラーMG",
+  "プロモデラーRG",
+  "N-ZAP85",
+  "N-ZAP89",
+  "シャープマーカー",
+  "シャープマーカーコラボ",
+  "52ガロン",
+  "52ガロンデコ",
+  "96ガロン",
+  "96ガロンデコ",
+  "ジェットスイーパー",
+  "ジェットスイーパーカスタム",
+  "プライムシューター",
+  "プライムシューターコラボ",
+  "ボールドマーカー",
+  "ボールドマーカーネオ",
+  "L3リールガン",
+  "L3リールガンD",
+  "H3リールガン",
+  "H3リールガンD",
+  "ボトルガイザー",
+  "ボトルガイザーフォイル",
+  "スペースシューター",
+  "スペースシューターコラボ",
+  
+  "ホットブラスター",
+  "ホットブラスターカスタム",
+  "ロングブラスター",
+  "ロングブラスターカスタム",
+  "ラピッドブラスター",
+  "ラピッドブラスターデコ",
+  "Rブラスターエリート",
+  "Rブラスターエリートデコ",
+  "クラッシュブラスター",
+  "クラッシュブラスターネオ",
+  "ノヴァブラスター",
+  "ノヴァブラスターネオ",
+  "S-BLAST92",
+  "S-BLAST91",
+  
+  "バケットスロッシャー",
+  "バケットスロッシャーデコ",
+  "ヒッセン",
+  "ヒッセン・ヒュー",
+  "スクリュースロッシャー",
+  "スクリュースロッシャーネオ",
+  "エクスプロッシャー",
+  "エクスプロッシャーカスタム",
+  "オーバーフロッシャー",
+  "オーバーフロッシャーデコ",
+  "モップリン",
+  "モップリンD",
+  
+  "バレルスピナー",
+  "バレルスピナーデコ",
+  "スプラスピナー",
+  "スプラスピナーコラボ",
+  "ハイドラント",
+  "ハイドラントカスタム",
+  "クーゲルシュライバー",
+  "クーゲルシュライバー・ヒュー",
+  "ノーチラス47",
+  "ノーチラス79",
+  "イグザミナー",
+  "イグザミナー・ヒュー",
+  
+  "ホクサイ",
+  "ホクサイ・ヒュー",
+  "パブロ",
+  "パブロ・ヒュー",
+  "フィンセント",
+  "フィンセント・ヒュー",
+  
+  "ドライブワイパー",
+  "ドライブワイパーデコ",
+  "ジムワイパー",
+  "ジムワイパーヒュー",
+  "デンタルワイパーミント",
+  "デンタルワイパースミ",
+  
+  "トライストリンガー",
+  "トライストリンガーコラボ",
+  "LACT-450",
+  "LACT-450デコ",
+  "フルイドV",
+  "フルイドVカスタム",
+  
+  "パラシェルター",
+  "パラシェルターソレーラ",
+  "キャンピングシェルター",
+  "キャンピングシェルターソレーラ",
+  "スパイガジェット",
+  "スパイガジェットソレーラ",
+  "スパイガジェットベッチュー",
+  "24式張替傘・甲",
+  "24式張替傘・乙",
+  
+  "スプラローラー",
+  "スプラローラーコラボ",
+  "カーボンローラー",
+  "カーボンローラーデコ",
+  "ダイナモローラー",
+  "ダイナモローラーテスラ",
+  "ヴァリアブルローラー",
+  "ヴァリアブルローラーフォイル",
+  "ワイドローラー",
+  "ワイドローラーコラボ",
+  
+  "スプラチャージャー",
+  "スプラチャージャーコラボ",
+  "スクイックリンα",
+  "スクイックリンβ",
+  "リッター4K",
+  "リッター4Kカスタム",
+  "4Kスコープ",
+  "4Kスコープカスタム",
+  "スプラスコープ",
+  "スプラスコープコラボ",
+  "ソイチューバー",
+  "ソイチューバーカスタム",
+  "14式竹筒銃・甲",
+  "14式竹筒銃・乙",
+  "R-PEN/5H",
+  "R-PEN/5B",
+  
+  "スプラマニューバー",
+  "スプラマニューバーコラボ",
+  "スパッタリー",
+  "スパッタリー・ヒュー",
+  "クアッドホッパーブラック",
+  "クアッドホッパーホワイト",
+  "ケルビン525",
+  "ケルビン525デコ",
+  "デュアルスイーパー",
+  "デュアルスイーパーカスタム",
+  "ガエンFF",
+  "ガエンFF15",
+    ];
 
   const gearList = [
     "インク効率アップ(メイン)", "インク効率アップ(サブ)", "インク回復力アップ", "ヒト移動速度アップ", "イカダッシュ速度アップ",
@@ -142,7 +241,7 @@
     "サブ性能アップ", "相手インク影響軽減", "サブ影響軽減", "アクション強化"
   ];
 
-  function runRoulette() {
+ function runRoulette() {
     const inputs = document.querySelectorAll('#nameInputs input');
     const resultsDiv = document.getElementById('results');
     resultsDiv.innerHTML = "";
