Ver10.0.0武器ギアルーレット.html

--- a/武器ギアルーレット.html
+++ b/武器ギアルーレット.html
@@ -43,7 +43,7 @@
 
 <div class="options">
   <input type="checkbox" id="addNewWeapons">
-  <label for="addNewWeapons">☑️ 10.0.0の新武器を追加する</label>
+  <label for="addNewWeapons">☑️ Ver10.0.0の新武器を追加する</label>
 </div>
 
 <button onclick="runRoulette()">ルーレット開始！</button>
@@ -196,7 +196,38 @@
 ];
 
 // 10.0.0の新武器リスト
-  const newWeapons = [ 'シャープマーカーGECK', 'カーボンローラーANGL', 'スパッタリーOWL', 'フィンセントBRNZ', 'ヒッセンASH', 'ドライブワイパーRUST', 'スプラチャージャーFRST', 'スプラスコープFRST', 'プライムシューターFRZN', 'RブラスターエリートWNTR', 'ジェットスイーパーCOBR', 'スプラスピナーPYTN', 'H3リールガンSNAK', 'LACT-450MILK', 'キャンピングシェルターCREM', 'スプラシューター煌', 'ホットブラスター艶', 'プロモデラー彩', '.96ガロン爪', 'モップリン角', 'デュアルスイーパー蹄', 'ジムワイパー封', 'ハイドラント圧', 'スパイガジェット繚', 'スプラマニューバー耀', 'ワイドローラー惑', 'L3リールガン箔', 'ホクサイ彗', 'トライストリンガー燈', 'ダイナモローラー冥' ];
+  const newWeapons = [ 
+    'シャープマーカーGECK', 
+    'カーボンローラーANGL', 
+    'スパッタリーOWL', 
+    'フィンセントBRNZ', 
+    'ヒッセンASH', 
+    'ドライブワイパーRUST', 
+    'スプラチャージャーFRST', 
+    'スプラスコープFRST', 
+    'プライムシューターFRZN', 
+    'RブラスターエリートWNTR', 
+    'ジェットスイーパーCOBR', 
+    'スプラスピナーPYTN', 
+    'H3リールガンSNAK', 
+    'LACT-450MILK', 
+    'キャンピングシェルターCREM', 
+    'スプラシューター煌', 
+    'ホットブラスター艶', 
+    'プロモデラー彩', 
+    '.96ガロン爪', 
+    'モップリン角', 
+    'デュアルスイーパー蹄', 
+    'ジムワイパー封', 
+    'ハイドラント圧', 
+    'スパイガジェット繚', 
+    'スプラマニューバー耀', 
+    'ワイドローラー惑', 
+    'L3リールガン箔', 
+    'ホクサイ彗', 
+    'トライストリンガー燈', 
+    'ダイナモローラー冥'
+  ];
 
   const gearList = [
     "インク効率アップ(メイン)", "インク効率アップ(サブ)", "インク回復力アップ", "ヒト移動速度アップ", "イカダッシュ速度アップ", "スペシャル増加量アップ", "スペシャル減少量ダウン",
