--- a/武器ギアルーレット.html
+++ b/武器ギアルーレット.html
@@ -1,3 +1,5 @@
+HTML
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -9,7 +11,7 @@
     #nameInputs p { margin-bottom: 15px; }
     input[type="text"] { margin: 5px; width: 200px; padding: 5px; }
     .options { margin-bottom: 20px; font-size: 16px; }
-    .options label { cursor: pointer; } /* ラベルをクリックしやすくする */
+    .options label { cursor: pointer; }
     button { margin-top: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
     .result { margin-top: 20px; display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
     .player-block {
@@ -51,188 +53,9 @@
 <div id="results" class="result"></div>
 
 <script>
-  const weapons = [
-  "わかばシューター",
-  "もみじシューター",
-  "スプラシューター",
-  "スプラシューターコラボ",
-  "プロモデラーMG",
-  "プロモデラーRG",
-  "N-ZAP85",
-  "N-ZAP89",
-  "シャープマーカー",
-  "シャープマーカーコラボ",
-  "52ガロン",
-  "52ガロンデコ",
-  "96ガロン",
-  "96ガロンデコ",
-  "ジェットスイーパー",
-  "ジェットスイーパーカスタム",
-  "プライムシューター",
-  "プライムシューターコラボ",
-  "ボールドマーカー",
-  "ボールドマーカーネオ",
-  "L3リールガン",
-  "L3リールガンD",
-  "H3リールガン",
-  "H3リールガンD",
-  "ボトルガイザー",
-  "ボトルガイザーフォイル",
-  "スペースシューター",
-  "スペースシューターコラボ",
-  
-  "ホットブラスター",
-  "ホットブラスターカスタム",
-  "ロングブラスター",
-  "ロングブラスターカスタム",
-  "ラピッドブラスター",
-  "ラピッドブラスターデコ",
-  "Rブラスターエリート",
-  "Rブラスターエリートデコ",
-  "クラッシュブラスター",
-  "クラッシュブラスターネオ",
-  "ノヴァブラスター",
-  "ノヴァブラスターネオ",
-  "S-BLAST92",
-  "S-BLAST91",
-  
-  "バケットスロッシャー",
-  "バケットスロッシャーデコ",
-  "ヒッセン",
-  "ヒッセン・ヒュー",
-  "スクリュースロッシャー",
-  "スクリュースロッシャーネオ",
-  "エクスプロッシャー",
-  "エクスプロッシャーカスタム",
-  "オーバーフロッシャー",
-  "オーバーフロッシャーデコ",
-  "モップリン",
-  "モップリンD",
-  
-  "バレルスピナー",
-  "バレルスピナーデコ",
-  "スプラスピナー",
-  "スプラスピナーコラボ",
-  "ハイドラント",
-  "ハイドラントカスタム",
-  "クーゲルシュライバー",
-  "クーゲルシュライバー・ヒュー",
-  "ノーチラス47",
-  "ノーチラス79",
-  "イグザミナー",
-  "イグザミナー・ヒュー",
-  
-  "ホクサイ",
-  "ホクサイ・ヒュー",
-  "パブロ",
-  "パブロ・ヒュー",
-  "フィンセント",
-  "フィンセント・ヒュー",
-  
-  "ドライブワイパー",
-  "ドライブワイパーデコ",
-  "ジムワイパー",
-  "ジムワイパーヒュー",
-  "デンタルワイパーミント",
-  "デンタルワイパースミ",
-  
-  "トライストリンガー",
-  "トライストリンガーコラボ",
-  "LACT-450",
-  "LACT-450デコ",
-  "フルイドV",
-  "フルイドVカスタム",
-  
-  "パラシェルター",
-  "パラシェルターソレーラ",
-  "キャンピングシェルター",
-  "キャンピングシェルターソレーラ",
-  "スパイガジェット",
-  "スパイガジェットソレーラ",
-  "スパイガジェットベッチュー",
-  "24式張替傘・甲",
-  "24式張替傘・乙",
-  
-  "スプラローラー",
-  "スプラローラーコラボ",
-  "カーボンローラー",
-  "カーボンローラーデコ",
-  "ダイナモローラー",
-  "ダイナモローラーテスラ",
-  "ヴァリアブルローラー",
-  "ヴァリアブルローラーフォイル",
-  "ワイドローラー",
-  "ワイドローラーコラボ",
-  
-  "スプラチャージャー",
-  "スプラチャージャーコラボ",
-  "スクイックリンα",
-  "スクイックリンβ",
-  "リッター4K",
-  "リッター4Kカスタム",
-  "4Kスコープ",
-  "4Kスコープカスタム",
-  "スプラスコープ",
-  "スプラスコープコラボ",
-  "ソイチューバー",
-  "ソイチューバーカスタム",
-  "14式竹筒銃・甲",
-  "14式竹筒銃・乙",
-  "R-PEN/5H",
-  "R-PEN/5B",
-  
-  "スプラマニューバー",
-  "スプラマニューバーコラボ",
-  "スパッタリー",
-  "スパッタリー・ヒュー",
-  "クアッドホッパーブラック",
-  "クアッドホッパーホワイト",
-  "ケルビン525",
-  "ケルビン525デコ",
-  "デュアルスイーパー",
-  "デュアルスイーパーカスタム",
-  "ガエンFF",
-  "ガエンFF15",
-];
-
-// 10.0.0の新武器リスト
-  const newWeapons = [ 
-    'シャープマーカーGECK', 
-    'カーボンローラーANGL', 
-    'スパッタリーOWL', 
-    'フィンセントBRNZ', 
-    'ヒッセンASH', 
-    'ドライブワイパーRUST', 
-    'スプラチャージャーFRST', 
-    'スプラスコープFRST', 
-    'プライムシューターFRZN', 
-    'RブラスターエリートWNTR', 
-    'ジェットスイーパーCOBR', 
-    'スプラスピナーPYTN', 
-    'H3リールガンSNAK', 
-    'LACT-450MILK', 
-    'キャンピングシェルターCREM', 
-    'スプラシューター煌', 
-    'ホットブラスター艶', 
-    'プロモデラー彩', 
-    '.96ガロン爪', 
-    'モップリン角', 
-    'デュアルスイーパー蹄', 
-    'ジムワイパー封', 
-    'ハイドラント圧', 
-    'スパイガジェット繚', 
-    'スプラマニューバー耀', 
-    'ワイドローラー惑', 
-    'L3リールガン箔', 
-    'ホクサイ彗', 
-    'トライストリンガー燈', 
-    'ダイナモローラー冥'
-  ];
-
-  const gearList = [
-    "インク効率アップ(メイン)", "インク効率アップ(サブ)", "インク回復力アップ", "ヒト移動速度アップ", "イカダッシュ速度アップ", "スペシャル増加量アップ", "スペシャル減少量ダウン",
-    "スペシャル性能アップ", "復活時間短縮", "スーパージャンプ時間短縮", "サブ性能アップ", "相手インク影響軽減", "サブ影響軽減", "アクション強化"
-  ];
+  const weapons = [ "わかばシューター", "もみじシューター", "スプラシューター", "スプラシューターコラボ", "プロモデラーMG", "プロモデラーRG", "N-ZAP85", "N-ZAP89", "シャープマーカー", "シャープマーカーコラボ", "52ガロン", "52ガロンデコ", "96ガロン", "96ガロンデコ", "ジェットスイーパー", "ジェットスイーパーカスタム", "プライムシューター", "プライムシューターコラボ", "ボールドマーカー", "ボールドマーカーネオ", "L3リールガン", "L3リールガンD", "H3リールガン", "H3リールガンD", "ボトルガイザー", "ボトルガイザーフォイル", "スペースシューター", "スペースシューターコラボ", "ホットブラスター", "ホットブラスターカスタム", "ロングブラスター", "ロングブラスターカスタム", "ラピッドブラスター", "ラピッドブラスターデコ", "Rブラスターエリート", "Rブラスターエリートデコ", "クラッシュブラスター", "クラッシュブラスターネオ", "ノヴァブラスター", "ノヴァブラスターネオ", "S-BLAST92", "S-BLAST91", "バケットスロッシャー", "バケットスロッシャーデコ", "ヒッセン", "ヒッセン・ヒュー", "スクリュースロッシャー", "スクリュースロッシャーネオ", "エクスプロッシャー", "エクスプロッシャーカスタム", "オーバーフロッシャー", "オーバーフロッシャーデコ", "モップリン", "モップリンD", "バレルスピナー", "バレルスピナーデコ", "スプラスピナー", "スプラスピナーコラボ", "ハイドラント", "ハイドラントカスタム", "クーゲルシュライバー", "クーゲルシュライバー・ヒュー", "ノーチラス47", "ノーチラス79", "イグザミナー", "イグザミナー・ヒュー", "ホクサイ", "ホクサイ・ヒュー", "パブロ", "パブロ・ヒュー", "フィンセント", "フィンセント・ヒュー", "ドライブワイパー", "ドライブワイパーデコ", "ジムワイパー", "ジムワイパーヒュー", "デンタルワイパーミント", "デンタルワイパースミ", "トライストリンガー", "トライストリンガーコラボ", "LACT-450", "LACT-450デコ", "フルイドV", "フルイドVカスタム", "パラシェルター", "パラシェルターソレーラ", "キャンピングシェルター", "キャンピングシェルターソレーラ", "スパイガジェット", "スパイガジェットソレーラ", "スパイガジェットベッチュー", "24式張替傘・甲", "24式張替傘・乙", "スプラローラー", "スプラローラーコラボ", "カーボンローラー", "カーボンローラーデコ", "ダイナモローラー", "ダイナモローラーテスラ", "ヴァリアブルローラー", "ヴァリアブルローラーフォイル", "ワイドローラー", "ワイドローラーコラボ", "スプラチャージャー", "スプラチャージャーコラボ", "スクイックリンα", "スクイックリンβ", "リッター4K", "リッター4Kカスタム", "4Kスコープ", "4Kスコープカスタム", "スプラスコープ", "スプラスコープコラボ", "ソイチューバー", "ソイチューバーカスタム", "14式竹筒銃・甲", "14式竹筒銃・乙", "R-PEN/5H", "R-PEN/5B", "スプラマニューバー", "スプラマニューバーコラボ", "スパッタリー", "スパッタリー・ヒュー", "クアッドホッパーブラック", "クアッドホッパーホワイト", "ケルビン525", "ケルビン525デコ", "デュアルスイーパー", "デュアルスイーパーカスタム", "ガエンFF", "ガエンFF15" ];
+  const newWeapons = [ 'シャープマーカーGECK', 'カーボンローラーANGL', 'スパッタリーOWL', 'フィンセントBRNZ', 'ヒッセンASH', 'ドライブワイパーRUST', 'スプラチャージャーFRST', 'スプラスコープFRST', 'プライムシューターFRZN', 'RブラスターエリートWNTR', 'ジェットスイーパーCOBR', 'スプラスピナーPYTN', 'H3リールガンSNAK', 'LACT-450MILK', 'キャンピングシェルターCREM', 'スプラシューター煌', 'ホットブラスター艶', 'プロモデラー彩', '.96ガロン爪', 'モップリン角', 'デュアルスイーパー蹄', 'ジムワイパー封', 'ハイドラント圧', 'スパイガジェット繚', 'スプラマニューバー耀', 'ワイドローラー惑', 'L3リールガン箔', 'ホクサイ彗', 'トライストリンガー燈', 'ダイナモローラー冥' ];
+  const gearList = [ "インク効率アップ(メイン)", "インク効率アップ(サブ)", "インク回復力アップ", "ヒト移動速度アップ", "イカダッシュ速度アップ", "スペシャル増加量アップ", "スペシャル減少量ダウン", "スペシャル性能アップ", "復活時間短縮", "スーパージャンプ時間短縮", "サブ性能アップ", "相手インク影響軽減", "サブ影響軽減", "アクション強化" ];
 
   function runRoulette() {
     const inputs = document.querySelectorAll('#nameInputs input');
@@ -240,30 +63,18 @@
     const addNewWeaponsCheckbox = document.getElementById('addNewWeapons');
     resultsDiv.innerHTML = "";
 
-    // ★変更点：チェックボックスの状態に応じて、使用する武器リストを決定
-    let activeWeapons = [...weapons]; // まず元の武器リストをコピー
+    let activeWeapons = [...weapons];
     if (addNewWeaponsCheckbox.checked) {
-      // チェックが入っていたら、新しい武器リストを結合する
       activeWeapons = activeWeapons.concat(newWeapons);
     }
 
     inputs.forEach((input, index) => {
       const name = input.value || `プレイヤー${index + 1}`;
-      
-      // ★変更点：動的に作成したactiveWeaponsから武器を選ぶ
       const weapon = activeWeapons[Math.floor(Math.random() * activeWeapons.length)];
       const gear = gearList[Math.floor(Math.random() * gearList.length)];
-
-      resultsDiv.innerHTML += `
-        <div class="player-block">
-          <p><strong>${name}：</strong></p>
-          <p>武器：${weapon}</p>
-          <p>ギア：${gear}</p>
-        </div>
-      `;
+      resultsDiv.innerHTML += `<div class="player-block"><p><strong>${name}：</strong></p><p>武器：${weapon}</p><p>ギア：${gear}</p></div>`;
     });
   }
 </script>
-
 </body>
 </html>
