--- a/index.html
+++ b/index.html
@@ -1,287 +1,537 @@
 <!DOCTYPE html>
+
 <html lang="ja">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>武器ギアルーレット</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #e7f4ff;
-      text-align: center;
-      padding: 20px;
-      font-size: 1.2rem;
-    }
 
-    input {
-      margin: 5px;
-      width: 200px;
-    }
+  <meta charset="UTF-8">
 
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-    }
+  <title>武器ギアルーレット</title>
 
-    #results {
-      margin-top: 20px;
-    }
+  <style>
 
-    @media (max-width: 600px) {
-      body {
-        font-size: 1rem;
-      }
-    }
+    body { font-family: sans-serif; background: #e7f4ff; text-align: center; padding: 20px; }
 
-    .wrapper {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
-      max-width: 600px;
-      margin: 20px auto 0;
-    }
+    #nameInputs { margin-bottom: 20px; }
 
-    @media (min-width: 768px) {
-      .wrapper {
-        grid-template-columns: repeat(4, 1fr);
-      }
-    }
+    #nameInputs p { margin-bottom: 15px; }
 
-    .card {
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      font-size: 14px;
-      background: #fff;
-      text-align: left;
-    }
+    input[type="text"] { margin: 5px; width: 200px; padding: 5px; }
 
-    .card strong {
-      display: block;
-      margin-bottom: 5px;
-    }
+    .options { margin-bottom: 20px; font-size: 16px; }
 
-    #nameInputs {
-      margin-bottom: 20px;
-    }
-    .multi-card {
-  display: grid;
-  grid-template-columns: 1fr; /* 1列表示 */
-  gap: 8px;
-}
+    .options label { cursor: pointer; } /* ラベルをクリックしやすくする */
 
-.player-entry {
-  border-top: 1px solid #ddd;
-  padding-top: 6px;
-}
+    button { margin-top: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
 
-.player-entry:first-child {
-  border-top: none;
-}
-@media (max-width: 600px) {
-  .card {
-    font-size: 10px;
-    padding: 5px;
-  }
-}
-  </style>
+    .result { margin-top: 20px; display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+
+    .player-block {
+
+      text-align: left;
+
+      background: #ffffff;
+
+      border: 1px solid #ccc;
+
+      border-radius: 8px;
+
+      padding: 10px 15px;
+
+      width: 300px;
+
+      font-size: 16px;
+
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+
+    }
+
+    .player-block p { margin: 4px 0; }
+
+  </style>
+
 </head>
+
 <body>
+
+
 
 <h1>武器ギアルーレット</h1>
 
+
+
 <div id="nameInputs">
-  <p>8人分の名前を入力してね（空欄でもOK）</p>
-  <input type="text" placeholder="プレイヤー1"><br>
-  <input type="text" placeholder="プレイヤー2"><br>
-  <input type="text" placeholder="プレイヤー3"><br>
-  <input type="text" placeholder="プレイヤー4"><br>
-  <input type="text" placeholder="プレイヤー5"><br>
-  <input type="text" placeholder="プレイヤー6"><br>
-  <input type="text" placeholder="プレイヤー7"><br>
-  <input type="text" placeholder="プレイヤー8"><br>
+
+  <p>8人分の名前を入力してね（空欄でもOK）</p>
+
+  <input type="text" placeholder="プレイヤー1"><br>
+
+  <input type="text" placeholder="プレイヤー2"><br>
+
+  <input type="text" placeholder="プレイヤー3"><br>
+
+  <input type="text" placeholder="プレイヤー4"><br>
+
+  <input type="text" placeholder="プレイヤー5"><br>
+
+  <input type="text" placeholder="プレイヤー6"><br>
+
+  <input type="text" placeholder="プレイヤー7"><br>
+
+  <input type="text" placeholder="プレイヤー8"><br>
+
 </div>
 
-<div id="controlArea">
-  <button onclick="runRoulette()">ルーレット開始！</button>
+
+
+<div class="options">
+
+  <input type="checkbox" id="addNewWeapons">
+
+  <label for="addNewWeapons">☑️ Ver10.0.0の新武器を追加する</label>
+
 </div>
 
-<div id="results" class="wrapper"></div>
+
+
+<button onclick="runRoulette()">ルーレット開始！</button>
+
+
+
+<div id="results" class="result"></div>
+
 
 
 <script>
-  const weapons = [
-    "わかばシューター",
-  "もみじシューター",
-  "スプラシューター",
-  "スプラシューターコラボ",
-  "プロモデラーMG",
-  "プロモデラーRG",
-  "N-ZAP85",
-  "N-ZAP89",
-  "シャープマーカー",
-  "シャープマーカーコラボ",
-  "52ガロン",
-  "52ガロンデコ",
-  "96ガロン",
-  "96ガロンデコ",
-  "ジェットスイーパー",
-  "ジェットスイーパーカスタム",
-  "プライムシューター",
-  "プライムシューターコラボ",
-  "ボールドマーカー",
-  "ボールドマーカーネオ",
-  "L3リールガン",
-  "L3リールガンD",
-  "H3リールガン",
-  "H3リールガンD",
-  "ボトルガイザー",
-  "ボトルガイザーフォイル",
-  "スペースシューター",
-  "スペースシューターコラボ",
-  
-  "ホットブラスター",
-  "ホットブラスターカスタム",
-  "ロングブラスター",
-  "ロングブラスターカスタム",
-  "ラピッドブラスター",
-  "ラピッドブラスターデコ",
-  "Rブラスターエリート",
-  "Rブラスターエリートデコ",
-  "クラッシュブラスター",
-  "クラッシュブラスターネオ",
-  "ノヴァブラスター",
-  "ノヴァブラスターネオ",
-  "S-BLAST92",
-  "S-BLAST91",
-  
-  "バケットスロッシャー",
-  "バケットスロッシャーデコ",
-  "ヒッセン",
-  "ヒッセン・ヒュー",
-  "スクリュースロッシャー",
-  "スクリュースロッシャーネオ",
-  "エクスプロッシャー",
-  "エクスプロッシャーカスタム",
-  "オーバーフロッシャー",
-  "オーバーフロッシャーデコ",
-  "モップリン",
-  "モップリンD",
-  
-  "バレルスピナー",
-  "バレルスピナーデコ",
-  "スプラスピナー",
-  "スプラスピナーコラボ",
-  "ハイドラント",
-  "ハイドラントカスタム",
-  "クーゲルシュライバー",
-  "クーゲルシュライバー・ヒュー",
-  "ノーチラス47",
-  "ノーチラス79",
-  "イグザミナー",
-  "イグザミナー・ヒュー",
-  
-  "ホクサイ",
-  "ホクサイ・ヒュー",
-  "パブロ",
-  "パブロ・ヒュー",
-  "フィンセント",
-  "フィンセント・ヒュー",
-  
-  "ドライブワイパー",
-  "ドライブワイパーデコ",
-  "ジムワイパー",
-  "ジムワイパーヒュー",
-  "デンタルワイパーミント",
-  "デンタルワイパースミ",
-  
-  "トライストリンガー",
-  "トライストリンガーコラボ",
-  "LACT-450",
-  "LACT-450デコ",
-  "フルイドV",
-  "フルイドVカスタム",
-  
-  "パラシェルター",
-  "パラシェルターソレーラ",
-  "キャンピングシェルター",
-  "キャンピングシェルターソレーラ",
-  "スパイガジェット",
-  "スパイガジェットソレーラ",
-  "スパイガジェットベッチュー",
-  "24式張替傘・甲",
-  "24式張替傘・乙",
-  
-  "スプラローラー",
-  "スプラローラーコラボ",
-  "カーボンローラー",
-  "カーボンローラーデコ",
-  "ダイナモローラー",
-  "ダイナモローラーテスラ",
-  "ヴァリアブルローラー",
-  "ヴァリアブルローラーフォイル",
-  "ワイドローラー",
-  "ワイドローラーコラボ",
-  
-  "スプラチャージャー",
-  "スプラチャージャーコラボ",
-  "スクイックリンα",
-  "スクイックリンβ",
-  "リッター4K",
-  "リッター4Kカスタム",
-  "4Kスコープ",
-  "4Kスコープカスタム",
-  "スプラスコープ",
-  "スプラスコープコラボ",
-  "ソイチューバー",
-  "ソイチューバーカスタム",
-  "14式竹筒銃・甲",
-  "14式竹筒銃・乙",
-  "R-PEN/5H",
-  "R-PEN/5B",
-  
-  "スプラマニューバー",
-  "スプラマニューバーコラボ",
-  "スパッタリー",
-  "スパッタリー・ヒュー",
-  "クアッドホッパーブラック",
-  "クアッドホッパーホワイト",
-  "ケルビン525",
-  "ケルビン525デコ",
-  "デュアルスイーパー",
-  "デュアルスイーパーカスタム",
-  "ガエンFF",
-  "ガエンFF15",
-    ];
 
-  const gearList = [
-    "インク効率アップ(メイン)", "インク効率アップ(サブ)", "インク回復力アップ", "ヒト移動速度アップ", "イカダッシュ速度アップ",
-    "スペシャル増加量アップ", "スペシャル減少量ダウン", "スペシャル性能アップ", "復活時間短縮", "スーパージャンプ時間短縮",
-    "サブ性能アップ", "相手インク影響軽減", "サブ影響軽減", "アクション強化"
-  ];
+  const weapons = [
 
-function runRoulette() {
-    const inputs = document.querySelectorAll('#nameInputs input');
-    const resultsDiv = document.getElementById('results');
-    resultsDiv.innerHTML = "";
+  "わかばシューター",
 
-    inputs.forEach((input, index) => {
-      const name = input.value || `プレイヤー${index + 1}`;
-      const weapon = weapons[Math.floor(Math.random() * weapons.length)];
-      const gear = gearList[Math.floor(Math.random() * gearList.length)];
+  "もみじシューター",
 
-      const card = document.createElement("div");
-      card.className = "card";
-      card.innerHTML = `
-        <strong>${name}</strong>
-        武器：${weapon}<br>
-        ギア：${gear}
-      `;
-      resultsDiv.appendChild(card);
-    });
-  }
+  "スプラシューター",
+
+  "スプラシューターコラボ",
+
+  "プロモデラーMG",
+
+  "プロモデラーRG",
+
+  "N-ZAP85",
+
+  "N-ZAP89",
+
+  "シャープマーカー",
+
+  "シャープマーカーコラボ",
+
+  "52ガロン",
+
+  "52ガロンデコ",
+
+  "96ガロン",
+
+  "96ガロンデコ",
+
+  "ジェットスイーパー",
+
+  "ジェットスイーパーカスタム",
+
+  "プライムシューター",
+
+  "プライムシューターコラボ",
+
+  "ボールドマーカー",
+
+  "ボールドマーカーネオ",
+
+  "L3リールガン",
+
+  "L3リールガンD",
+
+  "H3リールガン",
+
+  "H3リールガンD",
+
+  "ボトルガイザー",
+
+  "ボトルガイザーフォイル",
+
+  "スペースシューター",
+
+  "スペースシューターコラボ",
+
+  
+
+  "ホットブラスター",
+
+  "ホットブラスターカスタム",
+
+  "ロングブラスター",
+
+  "ロングブラスターカスタム",
+
+  "ラピッドブラスター",
+
+  "ラピッドブラスターデコ",
+
+  "Rブラスターエリート",
+
+  "Rブラスターエリートデコ",
+
+  "クラッシュブラスター",
+
+  "クラッシュブラスターネオ",
+
+  "ノヴァブラスター",
+
+  "ノヴァブラスターネオ",
+
+  "S-BLAST92",
+
+  "S-BLAST91",
+
+  
+
+  "バケットスロッシャー",
+
+  "バケットスロッシャーデコ",
+
+  "ヒッセン",
+
+  "ヒッセン・ヒュー",
+
+  "スクリュースロッシャー",
+
+  "スクリュースロッシャーネオ",
+
+  "エクスプロッシャー",
+
+  "エクスプロッシャーカスタム",
+
+  "オーバーフロッシャー",
+
+  "オーバーフロッシャーデコ",
+
+  "モップリン",
+
+  "モップリンD",
+
+  
+
+  "バレルスピナー",
+
+  "バレルスピナーデコ",
+
+  "スプラスピナー",
+
+  "スプラスピナーコラボ",
+
+  "ハイドラント",
+
+  "ハイドラントカスタム",
+
+  "クーゲルシュライバー",
+
+  "クーゲルシュライバー・ヒュー",
+
+  "ノーチラス47",
+
+  "ノーチラス79",
+
+  "イグザミナー",
+
+  "イグザミナー・ヒュー",
+
+  
+
+  "ホクサイ",
+
+  "ホクサイ・ヒュー",
+
+  "パブロ",
+
+  "パブロ・ヒュー",
+
+  "フィンセント",
+
+  "フィンセント・ヒュー",
+
+  
+
+  "ドライブワイパー",
+
+  "ドライブワイパーデコ",
+
+  "ジムワイパー",
+
+  "ジムワイパーヒュー",
+
+  "デンタルワイパーミント",
+
+  "デンタルワイパースミ",
+
+  
+
+  "トライストリンガー",
+
+  "トライストリンガーコラボ",
+
+  "LACT-450",
+
+  "LACT-450デコ",
+
+  "フルイドV",
+
+  "フルイドVカスタム",
+
+  
+
+  "パラシェルター",
+
+  "パラシェルターソレーラ",
+
+  "キャンピングシェルター",
+
+  "キャンピングシェルターソレーラ",
+
+  "スパイガジェット",
+
+  "スパイガジェットソレーラ",
+
+  "スパイガジェットベッチュー",
+
+  "24式張替傘・甲",
+
+  "24式張替傘・乙",
+
+  
+
+  "スプラローラー",
+
+  "スプラローラーコラボ",
+
+  "カーボンローラー",
+
+  "カーボンローラーデコ",
+
+  "ダイナモローラー",
+
+  "ダイナモローラーテスラ",
+
+  "ヴァリアブルローラー",
+
+  "ヴァリアブルローラーフォイル",
+
+  "ワイドローラー",
+
+  "ワイドローラーコラボ",
+
+  
+
+  "スプラチャージャー",
+
+  "スプラチャージャーコラボ",
+
+  "スクイックリンα",
+
+  "スクイックリンβ",
+
+  "リッター4K",
+
+  "リッター4Kカスタム",
+
+  "4Kスコープ",
+
+  "4Kスコープカスタム",
+
+  "スプラスコープ",
+
+  "スプラスコープコラボ",
+
+  "ソイチューバー",
+
+  "ソイチューバーカスタム",
+
+  "14式竹筒銃・甲",
+
+  "14式竹筒銃・乙",
+
+  "R-PEN/5H",
+
+  "R-PEN/5B",
+
+  
+
+  "スプラマニューバー",
+
+  "スプラマニューバーコラボ",
+
+  "スパッタリー",
+
+  "スパッタリー・ヒュー",
+
+  "クアッドホッパーブラック",
+
+  "クアッドホッパーホワイト",
+
+  "ケルビン525",
+
+  "ケルビン525デコ",
+
+  "デュアルスイーパー",
+
+  "デュアルスイーパーカスタム",
+
+  "ガエンFF",
+
+  "ガエンFF15",
+
+];
+
+
+
+// 10.0.0の新武器リスト
+
+  const newWeapons = [ 
+
+    'シャープマーカーGECK', 
+
+    'カーボンローラーANGL', 
+
+    'スパッタリーOWL', 
+
+    'フィンセントBRNZ', 
+
+    'ヒッセンASH', 
+
+    'ドライブワイパーRUST', 
+
+    'スプラチャージャーFRST', 
+
+    'スプラスコープFRST', 
+
+    'プライムシューターFRZN', 
+
+    'RブラスターエリートWNTR', 
+
+    'ジェットスイーパーCOBR', 
+
+    'スプラスピナーPYTN', 
+
+    'H3リールガンSNAK', 
+
+    'LACT-450MILK', 
+
+    'キャンピングシェルターCREM', 
+
+    'スプラシューター煌', 
+
+    'ホットブラスター艶', 
+
+    'プロモデラー彩', 
+
+    '.96ガロン爪', 
+
+    'モップリン角', 
+
+    'デュアルスイーパー蹄', 
+
+    'ジムワイパー封', 
+
+    'ハイドラント圧', 
+
+    'スパイガジェット繚', 
+
+    'スプラマニューバー耀', 
+
+    'ワイドローラー惑', 
+
+    'L3リールガン箔', 
+
+    'ホクサイ彗', 
+
+    'トライストリンガー燈', 
+
+    'ダイナモローラー冥'
+
+  ];
+
+
+
+  const gearList = [
+
+    "インク効率アップ(メイン)", "インク効率アップ(サブ)", "インク回復力アップ", "ヒト移動速度アップ", "イカダッシュ速度アップ", "スペシャル増加量アップ", "スペシャル減少量ダウン",
+
+    "スペシャル性能アップ", "復活時間短縮", "スーパージャンプ時間短縮", "サブ性能アップ", "相手インク影響軽減", "サブ影響軽減", "アクション強化"
+
+  ];
+
+
+
+  function runRoulette() {
+
+    const inputs = document.querySelectorAll('#nameInputs input');
+
+    const resultsDiv = document.getElementById('results');
+
+    const addNewWeaponsCheckbox = document.getElementById('addNewWeapons');
+
+    resultsDiv.innerHTML = "";
+
+
+
+    // ★変更点：チェックボックスの状態に応じて、使用する武器リストを決定
+
+    let activeWeapons = [...weapons]; // まず元の武器リストをコピー
+
+    if (addNewWeaponsCheckbox.checked) {
+
+      // チェックが入っていたら、新しい武器リストを結合する
+
+      activeWeapons = activeWeapons.concat(newWeapons);
+
+    }
+
+
+
+    inputs.forEach((input, index) => {
+
+      const name = input.value || `プレイヤー${index + 1}`;
+
+      
+
+      // ★変更点：動的に作成したactiveWeaponsから武器を選ぶ
+
+      const weapon = activeWeapons[Math.floor(Math.random() * activeWeapons.length)];
+
+      const gear = gearList[Math.floor(Math.random() * gearList.length)];
+
+
+
+      resultsDiv.innerHTML += `
+
+        <div class="player-block">
+
+          <p><strong>${name}：</strong></p>
+
+          <p>武器：${weapon}</p>
+
+          <p>ギア：${gear}</p>
+
+        </div>
+
+      `;
+
+    });
+
+  }
+
 </script>
 
+
+
 </body>
+
 </html>
