--- a/武器ギアルーレット.html
+++ b/武器ギアルーレット.html
@@ -264,7 +264,7 @@
     "スタートダッシュ", "ラストスパート", "逆境強化", "カムバック"
   ];
   const clothingGearList = [
-    "イカニンジャ", "リベンジ", "サーマルインク", "復活ペナルティアップ", "追加ギアパワー倍化"
+    "イカニンジャ", "リベンジ", "サーマルインク", "復活ペナルティアップ"
   ];
   const shoesGearList = [
     "ステルスジャンプ", "対物攻撃力アップ", "受け身術"
