--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     /* チャージャー */
     { name: "スプラチャージャー", type: "チャージャー" }, { name: "スプラチャージャーコラボ", type: "チャージャー" }, { name: "スクイックリンα", type: "チャージャー" }, { name: "スクイックリンβ", type: "チャージャー" }, { name: "リッター4K", type: "チャージャー" }, { name: "リッター4Kカスタム", type: "チャージャー" }, { name: "4Kスコープ", type: "チャージャー" }, { name: "4Kスコープカスタム", type: "チャージャー" }, { name: "スプラスコープ", type: "チャージャー" }, { name: "スプラスコープコラボ", type: "チャージャー" }, { name: "ソイチューバー", type: "チャージャー" }, { name: "ソイチューバーカスタム", type: "チャージャー" }, { name: "14式竹筒銃・甲", type: "チャージャー" }, { name: "14式竹筒銃・乙", type: "チャージャー" }, { name: "R-PEN/5H", type: "チャージャー" }, { name: "R-PEN/5B", type: "チャージャー" },
     /* マニューバー */
-    { name: "スプラマニューバー", type: "マニューバー" }, { name: "スプラマニューバーコラボ", type: "マニューバー" }, { name: "スパッタリー", type: "マニューバー" }, { name: "スパッタリー・ヒュー", type: "マニューバー" }, { name: "クアッドホッパーブラック", type: "マニューバー" }, { name: "クアッドホッパーホワイト", type: "マニューバー" }, { name: "ケルビン525", type: "マニューバー" }, { name: "ケルビン525デコ", type: "マニューバー" }, { name: "デュアルスイーパー", type: "マニューバー" }, { name: "デュアルスイーパーカスタム", type: "マニューバー" }, { name: "ガエンFF", type: "マニューバー" }, { name: "ガエンFF15", type: "マニューバー" }
+    { name: "スプラマニューバー", type: "マニューバー" }, { name: "スプラマニューバーコラボ", type: "マニューバー" }, { name: "スパッタリー", type: "マニューバー" }, { name: "スパッタリー・ヒュー", type: "マニューバー" }, { name: "クアッドホッパーブラック", type: "マニューバー" }, { name: "クアッドホッパーホワイト", type: "マニューバー" }, { name: "ケルビン525", type: "マニューバー" }, { name: "ケルビン525デコ", type: "マニューバー" }, { name: "デュアルスイーパー", type: "マニューバー" }, { name: "デュアルスイーパーカスタム", type: "マニューバー" }, { name: "ガエンFF", type: "マニューバー" }, { name: "ガエンFFカスタム", type: "マニューバー" }
   ];
 
   // ---------------------------------
